--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prerender-spa-plugin": "^3.4.0",
     "sass-loader": "^8.0.2",
     "typescript": "~3.7.5",
+    "vue-cli-plugin-prerender-spa": "~1.1.6",
     "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
