--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdi/js": "^4.9.95",
     "core-js": "^3.6.4",
     "lodash": "^4.17.15",
+    "markdown-it": "^10.0.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
     "vue-property-decorator": "^8.3.0",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.149",
+    "@types/markdown-it": "0.0.9",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "@vue/cli-plugin-babel": "~4.2.0",
