--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:analize": "vue-cli-service build --analyze",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@mdi/js": "^4.9.95",
     "core-js": "^3.6.4",
-    "lodash": "^4.17.15",
+    "lodash-es": "^4.17.15",
     "markdown-it": "^10.0.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
@@ -19,7 +20,7 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.149",
+    "@types/lodash-es": "^4.17.3",
     "@types/markdown-it": "0.0.9",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
@@ -43,7 +44,8 @@
     "sass-loader": "^8.0.2",
     "typescript": "~3.7.5",
     "vue-cli-plugin-prerender-spa": "~1.1.6",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-bundle-analyzer": "^3.6.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
