Update icons set

--- a/config.json
+++ b/config.json
@@ -10,7 +10,8 @@
     "mdiInstagram",
     "mdiMenuLeft",
     "mdiMenuRight",
-    "mdiBookOpenVariant"
+    "mdiBookOpenVariant",
+    "mdiArrowCollapseUp"
   ],
   "highlightLanguages": [
     { "name": "javascript", "alias": "js" },
