--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "markdown-it-mark": "^3.0.0",
     "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
+    "path-browserify": "^1.0.1",
     "prismjs": "^1.19.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
