--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "markdown-it-container": "^2.0.0",
     "markdown-it-deflist": "^2.0.3",
     "markdown-it-emoji": "^1.4.0",
+    "markdown-it-external-links": "0.0.6",
     "markdown-it-footnote": "^3.0.2",
     "markdown-it-ins": "^3.0.0",
     "markdown-it-mark": "^3.0.0",
