--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash-es": "^4.17.15",
     "markdown-it": "^10.0.0",
     "markdown-it-abbr": "^1.0.4",
+    "markdown-it-anchor": "^5.2.7",
     "markdown-it-container": "^2.0.0",
     "markdown-it-deflist": "^2.0.3",
     "markdown-it-emoji": "^1.4.0",
@@ -29,6 +30,7 @@
     "markdown-it-mark": "^3.0.0",
     "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
+    "markdown-it-toc-done-right": "^4.1.0",
     "path-browserify": "^1.0.1",
     "prismjs": "^1.19.0",
     "vue": "^2.6.11",
