--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
   },
   "dependencies": {
     "@mdi/js": "^4.9.95",
-    "@types/prismjs": "^1.16.0",
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
     "core-js": "^3.6.4",
-    "jszip": "^3.4.0",
     "lodash-es": "^4.17.15",
     "markdown-it": "^10.0.0",
     "markdown-it-abbr": "^1.0.4",
@@ -36,6 +34,7 @@
     "prismjs": "^1.19.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
+    "vue-codemirror": "^4.0.6",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.5",
     "vue-scrollto": "^2.18.1",
@@ -47,6 +46,7 @@
     "@types/lodash-es": "^4.17.3",
     "@types/markdown-it": "0.0.9",
     "@types/node": "^13.13.2",
+    "@types/prismjs": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "@vue/cli-plugin-babel": "~4.2.0",
