Add new article, edit article buttons

--- a/config.json
+++ b/config.json
@@ -15,7 +15,8 @@
     "mdiEye",
     "mdiPencil",
     "mdiDownload",
-    "mdiBookOpen"
+    "mdiBookOpen",
+    "mdiPlus"
   ],
   "highlightLanguages": [
     { "name": "javascript", "alias": "js" },
