--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "markdown-it-emoji": "^1.4.0",
     "markdown-it-external-links": "0.0.6",
     "markdown-it-footnote": "^3.0.2",
+    "markdown-it-imsize": "^2.0.1",
     "markdown-it-ins": "^3.0.0",
     "markdown-it-mark": "^3.0.0",
     "markdown-it-sub": "^1.0.0",
